Tweaked metric accuracy.

--- a/patent_similarity.ipynb
+++ b/patent_similarity.ipynb
@@ -811,8 +811,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "np.set_printoptions(precision=2, suppress=True)\n",
+    "\n",
     "def pear_corr_dict(valid_pred):\n",
-    "    return {'pearson': np.corrcoef(*valid_pred)}"
+    "    return {'pearson': np.corrcoef(*valid_pred)[0][1]}"
    ]
   },
   {
