Add code to compress and download model when on Kaggle.

--- a/patent_similarity.ipynb
+++ b/patent_similarity.ipynb
@@ -484,6 +484,84 @@
    "source": [
     "trainer.save_model(\"model/\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zip and Download Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zip Up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "\n",
+    "if is_kaggle:\n",
+    "    directory_to_zip = Path(\"/kaggle/working/model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if is_kaggle:\n",
+    "    with zipfile.ZipFile(\"patent_model.zip\", mode='w') as archive:\n",
+    "        for file in directory_to_zip.iterdir():\n",
+    "            archive.write(file, arcname=file.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if is_kaggle:\n",
+    "    with zipfile.ZipFile(\"patent_model.zip\", mode=\"r\") as archive:\n",
+    "        archive.printdir()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create download link since Kaggle's file manager isn't good."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.chdir(r'/kaggle/working')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import FileLink\n",
+    "\n",
+    "FileLink(r'patent_model.zip')"
+   ]
   }
  ],
  "metadata": {
