--- a/patent_similarity.ipynb
+++ b/patent_similarity.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_df['input'] = training_df.agg(lambda sample: f\"TEXT1: {sample['context']}; TEXT2: {sample['target']}; ANC1: {sample['anchor']}\", axis=1)"
+    "training_df['input'] = training_df.agg(lambda document: f\"TEXT1: {document['context']}; TEXT2: {document['target']}; ANC1: {document['anchor']}\", axis=1)"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tokenize_data(sample): return tokenizer(sample['input'])"
+    "def tokenize_document(document): return tokenizer(document['input'])"
    ]
   },
   {
@@ -367,7 +367,7 @@
    ],
    "source": [
     "# This is much faster than actually setting the environment variable TOKENIZERS_PARALLELISM to false.\n",
-    "tokenized_ds = training_ds.map(tokenize_data, batched=True)"
+    "tokenized_ds = training_ds.map(tokenize_document, batched=True)"
    ]
   },
   {
@@ -406,8 +406,8 @@
     }
    ],
    "source": [
-    "first_sample = tokenized_ds[0]\n",
-    "first_sample['input'], first_sample['input_ids']"
+    "first_document = tokenized_ds[0]\n",
+    "first_document['input'], first_document['input_ids']"
    ]
   },
   {
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_df['input'] = testing_df.agg(lambda sample: f\"TEXT1: {sample['context']}; TEXT2: {sample['target']}; ANC1: {sample['anchor']}\", axis=1)"
+    "testing_df['input'] = testing_df.agg(lambda document: f\"TEXT1: {document['context']}; TEXT2: {document['target']}; ANC1: {document['anchor']}\", axis=1)"
    ]
   },
   {
@@ -596,7 +596,7 @@
     }
    ],
    "source": [
-    "testing_ds = Dataset.from_pandas(testing_df).map(tokenize_data, batched=True)"
+    "testing_ds = Dataset.from_pandas(testing_df).map(tokenize_document, batched=True)"
    ]
   },
   {
@@ -626,8 +626,8 @@
     "\n",
     "np.set_printoptions(precision=2, suppress=True)\n",
     "\n",
-    "def pear_corr_dict(valid_pred):\n",
-    "    return {'pearson': np.corrcoef(*valid_pred)[0][1]}"
+    "def pear_corr_dict(prediction):\n",
+    "    return {'pearson': np.corrcoef(*prediction)[0][1]}"
    ]
   },
   {
@@ -750,170 +750,93 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Inference"
+   ],
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Save Model"
-   ]
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model(\"model/\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+    "predictions = trainer.predict(testing_ds).predictions.astype(float)\n",
+    "predictions"
+   ],
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Zip and Download Model"
-   ]
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Zip Up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zipfile\n",
-    "\n",
-    "if is_kaggle:\n",
-    "    directory_to_zip = Path(\"/kaggle/working/model\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if is_kaggle:\n",
-    "    with zipfile.ZipFile(\"patent_model.zip\", mode='w') as archive:\n",
-    "        for file in directory_to_zip.iterdir():\n",
-    "            archive.write(file, arcname=file.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if is_kaggle:\n",
-    "    with zipfile.ZipFile(\"patent_model.zip\", mode=\"r\") as archive:\n",
-    "        archive.printdir()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create download link since Kaggle's file manager isn't good."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.chdir(r'/kaggle/working')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import FileLink\n",
-    "\n",
-    "FileLink(r'patent_model.zip')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+    "Some predictions are larger than 1 and less than 0. Applying a ReLU to\n",
+    " fix it, though there are better ways to fix this."
+   ],
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Model Inference"
-   ]
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at patent_model/ were not used when initializing DebertaV2Model: ['classifier.weight', 'classifier.bias', 'pooler.dense.bias', 'pooler.dense.weight']\n",
-      "- This IS expected if you are initializing DebertaV2Model from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DebertaV2Model from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = AutoModel.from_pretrained('patent_model/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DebertaV2Model' object has no attribute 'predict'",
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [29], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m predictions \u001B[39m=\u001B[39m model\u001B[39m.\u001B[39;49mpredict(testing_ds)\n",
-      "File \u001B[0;32m~/lib/python3.10/site-packages/torch/nn/modules/module.py:1504\u001B[0m, in \u001B[0;36mModule.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   1502\u001B[0m     \u001B[39mif\u001B[39;00m name \u001B[39min\u001B[39;00m modules:\n\u001B[1;32m   1503\u001B[0m         \u001B[39mreturn\u001B[39;00m modules[name]\n\u001B[0;32m-> 1504\u001B[0m \u001B[39mraise\u001B[39;00m \u001B[39mAttributeError\u001B[39;00m(\u001B[39m\"\u001B[39m\u001B[39m'\u001B[39m\u001B[39m{}\u001B[39;00m\u001B[39m'\u001B[39m\u001B[39m object has no attribute \u001B[39m\u001B[39m'\u001B[39m\u001B[39m{}\u001B[39;00m\u001B[39m'\u001B[39m\u001B[39m\"\u001B[39m\u001B[39m.\u001B[39mformat(\n\u001B[1;32m   1505\u001B[0m     \u001B[39mtype\u001B[39m(\u001B[39mself\u001B[39m)\u001B[39m.\u001B[39m\u001B[39m__name__\u001B[39m, name))\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'DebertaV2Model' object has no attribute 'predict'"
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m predictions \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39mclip(predictions, \u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m); predictions\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'np' is not defined"
      ]
     }
    ],
    "source": [
-    "predictions = model.predict(testing_ds)"
-   ]
+    "predictions = np.clip(predictions, 0, 1); predictions"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create Submission File"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "import datasets"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "submission = datasets.Dataset.from_dict({\n",
+    "    'id': testing_ds['id'],\n",
+    "    'score': predictions\n",
+    "})\n",
+    "\n",
+    "submission.to_csv('submission.csv', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
