Now using fastkaggle for initial setup.

--- a/patent_similarity_iteration.ipynb
+++ b/patent_similarity_iteration.ipynb
@@ -45,21 +45,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "('Darwin', '')"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "environment = system()\n",
-    "is_kaggle = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', '')\n",
-    "\n",
-    "environment, is_kaggle"
+    "try:\n",
+    "    from fastkaggle import *\n",
+    "except ModuleNotFoundError:\n",
+    "    ! pip install -Uq fastkaggle\n",
+    "    from fastkaggle import *"
    ],
    "metadata": {
     "collapsed": false
@@ -70,23 +62,18 @@
    "execution_count": 3,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "us-patent-phrase-to-phrase-matching.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
-     ]
+     "data": {
+      "text/plain": "('Darwin', '')"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "if is_kaggle:\n",
-    "    !pip install -Uqq fastai\n",
-    "else:\n",
-    "    import kaggle\n",
-    "    data_path = Path('us-patent-phrase-to-phrase-matching')\n",
-    "    # The line below can already tell whether the data has been downloaded or\n",
-    "    #  not.\n",
-    "    kaggle.api.competition_download_cli(str(data_path))\n",
-    "    ZipFile(f'{data_path}.zip').extractall(data_path)"
+    "environment = system()\n",
+    "\n",
+    "environment, iskaggle"
    ],
    "metadata": {
     "collapsed": false
@@ -95,20 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(#3) [Path('us-patent-phrase-to-phrase-matching/test.csv'),Path('us-patent-phrase-to-phrase-matching/train.csv'),Path('us-patent-phrase-to-phrase-matching/sample_submission.csv')]"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if is_kaggle:\n",
-    "    data_path = Path('../input/us-patent-phrase-to-phrase-matching')\n",
-    "data_path.ls()"
+    "data_path = setup_comp('us-patent-phrase-to-phrase-matching')\n",
+    "# Not sure if I need to unzip.\n",
+    "ZipFile(f'{data_path}.zip').extractall(data_path)"
    ],
    "metadata": {
     "collapsed": false
